# symmetrical-lamp

./: .gitignore  .gitmodules  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.h  README.md  sl.c  symmetricalLamp.cpp
